관리자 member 완료

--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -67,7 +67,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="status-item-name">총 회원수</div>
+                                <div class="status-item-name">회원수</div>
                             </div>
                             <div class="status-item-count">
                                 <div th:text="${pageDTO.total}">1</div>
@@ -82,7 +82,7 @@
                 <div class="table__box">
                     <div class="table__search__form">
                         <button id="delete-button" class="button__type_2 button__color__red">
-                            사용자 삭제
+                            회원 탈퇴/가입
                         </button>
                         <!-- default.css -->
                         <div class="search-box-wrap">
@@ -121,7 +121,7 @@
                             <th>이름</th>
                             <th>이메일</th>
                             <th>랭크</th>
-                            <th>공양미</th>
+                            <th>탈퇴여부</th>
                             <th></th>
                         </tr>
                         <!--              <tr class="table__content">-->
