메일 보내기까지 완료

--- a/src/main/resources/templates/join-login/find-password.html
+++ b/src/main/resources/templates/join-login/find-password.html
@@ -44,6 +44,19 @@
             <div class="password-footer">© 2023 SimBongSa Inc.</div>
         </div>
     </div>
+
+    <!-- 이메일 중복 시 모달 -->
+    <div class="modal-wrap">
+        <div class="modal-container">
+            <div class="modal">
+                <div class="modal-content">가입한 이메일을 입력해 주세요</div>
+                <div class="modal-ok-div">
+                    <button type="button" class="modal-ok">확인</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/join-login/find-password.js"></script>
