--- a/src/main/resources/static/css/join-login/email-join.css
+++ b/src/main/resources/static/css/join-login/email-join.css
@@ -44,6 +44,19 @@ input[type="checkbox"] {
     padding: 0;
 }
 
+.full-screen{
+    font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* -webkit-box-orient: vertical; */
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100%;
+    height: 100%;
+}
+
 .all-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -412,9 +425,9 @@ input[type="checkbox"] {
     text-align: center;
 }
 
-/* 모달 */
+/* 확인모달 */
 .modal-wrap {
-    position: absolute;
+    position: fixed;
     width: auto;
     z-index: 9999;
     left: 0px;
@@ -473,7 +486,6 @@ input[type="checkbox"] {
     color: rgb(255, 87, 87);
     cursor: pointer;
 }
-
 
 @media (min-width: 1080px) {
     .join-header {
