--- a/src/main/resources/static/css/join-login/email-login.css
+++ b/src/main/resources/static/css/join-login/email-login.css
@@ -56,6 +56,19 @@ input {
     line-height: normal;
 }
 
+.full-screen{
+    font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* -webkit-box-orient: vertical; */
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100%;
+    height: 100%;
+}
+
 .all-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -527,6 +540,7 @@ input {
     margin: 0px 0px 12px;
 }
 
+/* 확인모달 */
 .modal-wrap {
     position: absolute;
     width: auto;
@@ -543,7 +557,7 @@ input {
     background: rgba(13, 13, 13, 0.65);
 }
 
-.modal-check {
+.modal {
     max-width: 60%;
     min-width: 328px;
     position: absolute;
