--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/join-login/email-login.css">
 </head>
 <body>
-    <div class="wrap">
+    <div class="wrap full-screen">
         <div class="login-header">
             <div class="login-header-text">
                 <a href="" class="header-logo">
@@ -87,16 +87,20 @@
             </div>
             <div class="half-img"></div>
         </div>
-    </div>
 
-    <div class="modal-container">
-        <div class="modal-check">
-            <div class="modal-content">아이디 비밀번호를 다시 확인해주세요</div>
-            <div class="modal-ok-div">
-                <button type="button" class="modal-ok">확인</button>
+        <div class="modal-wrap">
+            <div class="modal-container">
+                <div class="modal">
+                    <div class="modal-content">이메일 비밀번호를 다시 확인해주세요</div>
+                    <div class="modal-ok-div">
+                        <button type="button" class="modal-ok">확인</button>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
+
 
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
