후원 상세페이지 작업중

--- a/src/main/resources/static/css/support/support-rice-modal.css
+++ b/src/main/resources/static/css/support/support-rice-modal.css
@@ -193,7 +193,7 @@ input::placeholder {
     padding: 0.625em;
     overflow-x: hidden;
     transition: background-color .1s;
-    backdrop-filter: blur(2px);
+    /*backdrop-filter: blur(2px);*/
 }
 .support-layout-error{
     display: flex;
