비밀번호 찾기

--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -24,12 +24,12 @@
                 <div class="password-inner-wrap">
                     <h3 class="password-title">비밀번호 재설정</h3>
 
-                    <form action="" name="changePasswordForm">
+                    <form th:action="@{/member/change-password}" method="post" name="changePasswordForm">
                         <div class="input-div">
                             <div class="input-title">변경할 비밀번호</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="password" class="input-write" placeholder="변경할 비밀번호">
+                                    <input name="memberPassword" type="password" class="input-write" placeholder="변경할 비밀번호">
                                 </span>
                             </div>
                             <div class="email-error"></div>
@@ -43,7 +43,7 @@
                             <div class="email-error"></div>
                         </div>
                         </form>
-                        <button class="submit-button">
+                        <button type="button" class="submit-button">
                             <span>비밀번호 재설정</span>
                         </button>
                     </form>
